--- a/probability_counter/notebook/bigdata 9.ipynb
+++ b/probability_counter/notebook/bigdata 9.ipynb
@@ -8,8 +8,26 @@
     "intersection. product is example.\n",
     "\n",
     "product number is product. If tnorm independence assumed. \n",
-    "probability and fuzzy are 2 different. one is membership(fuzzy) "
+    "probability and fuzzy are 2 different. one is membership(fuzzy).\n",
+    "\n",
+    "weibull distri is gen of exponential. beta and alpha. beta works like power. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4/5*(45/50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
