--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -427,6 +427,9 @@
     "            return 1\n",
     "        if (n == 1) and (k == 0):\n",
     "            return 0\n",
+    "\n",
+    "        if k == 0:\n",
+    "            return 0\n",
     "        \n",
     "        return (1-1/np.sqrt(2)**(k-1))*self.DecreasingProbExpectedCount(n-1, k-1) + (1/np.sqrt(2)**(k-1))*self.DecreasingProbExpectedCount(n-1, k)\n",
     "\n",
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,45 +484,70 @@
     "    if (n == 1) and (k == 0):\n",
     "        return 0\n",
     "    \n",
+    "    if k==0:\n",
+    "        return 0\n",
+    "\n",
+    "    if k==n:\n",
+    "        return (1/np.sqrt(2)**(n-1))*DExpected(n-1, n-1)\n",
+    "\n",
     "    return DExpected(n-1, k-1)*(1/np.sqrt(2)**(k-1)) + DExpected(n-1, k)*(1-1/np.sqrt(2)**(k))\n",
-    "    #DExpected(n-1, k-1)\n"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1.4142135623730951\n"
+      "(10, 0) 0 0\n",
+      "(10, 1) 1.5862946206156885e-05 1.5862946206156885e-05\n",
+      "(10, 2) 0.006614226377933707 0.006630089324139864\n",
+      "(10, 3) 0.11193086500975813 0.11856095433389799\n",
+      "(10, 4) 0.36563268653877345 0.48419364087267147\n",
+      "(10, 5) 0.3628518881694388 0.8470455290421103\n",
+      "(10, 6) 0.13246635436891685 0.9795118834110271\n",
+      "(10, 7) 0.01932170529561577 0.9988335887066428\n",
+      "(10, 8) 0.0011407129184742096 0.999974301625117\n",
+      "(10, 9) 2.5529787488750637e-05 0.9999998314126057\n",
+      "(10, 10) 1.685873940435756e-07 0.9999999999999998\n",
+      "0.9999999999999998\n"
      ]
     }
    ],
    "source": [
-    "print(DExpected(n=3,k=0))"
+    "n=10\n",
+    "cummulative=0\n",
+    "cumm_list = []\n",
+    "for k in range(n+1):\n",
+    "    res = DExpected(n=n,k=k)\n",
+    "    cummulative += res\n",
+    "    cumm_list.append(res)\n",
+    "    print((n,k), DExpected(n=n,k=k), cummulative)\n",
+    "print(summer)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7071067811865475"
+       "1.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/np.sqrt(2)"
+    "plt.plot(cumm_list)"
    ]
   },
   {
