--- a/probability_counter/latex_presentation/Ablordeppey.tex
+++ b/probability_counter/latex_presentation/Ablordeppey.tex
@@ -46,6 +46,14 @@
 % set comment color to blue
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
 \SetCommentSty{mycommfont}
+
+% drawing trees
+\usepackage{tikz}
+\usetikzlibrary{trees}
+
+\usepackage{tikz}
+\usetikzlibrary{arrows, positioning, automata}
+
 \begin{document}
 	
 	%\Header{Volume}{Number}{Month}{Year}{InitialPage}
@@ -119,7 +127,7 @@
 		
 	 	
 	\section{EXACT COUNTER}
-		For this counter, the probability of increasing the counter value for a given new encounter of the letter $p=1$. Anytime a new letter is observed from the text stream, the counter value get increased. Thus, $q=0$.
+		This counter could be considered as a fixed probability counter, where the probability of increasing the counter value for a given new encounter of a letter is $p=1$. Anytime a new letter is observed from the text stream, the counter value get increased. Thus, $q=0$.
 		Hence, the expected value, variance and standard deviation of the counter values is given as
 		\begin{align*}
 			\mathbb{E}[k_n] &= n\cdot p\\
@@ -209,6 +217,144 @@
 		\end{figure}	
 	
 	\section{DECREASING PROBABILITY COUNTER}
+	
+		% Define styles for bags and leafs
+		\tikzstyle{bag} = [text width=4em, text centered]
+		\tikzstyle{end} = [circle]
+		
+		\begin{figure}
+			\begin{center}
+				\begin{tikzpicture}[>=stealth',shorten >=1pt,node distance=2cm,on grid,initial/.style={}]
+					\node[state] (T1) {$0$};
+					\node[state] (T2) [below left =of T1] {$0$};
+					\node[state] (T3) [below right  =of T1] {$1$};
+					\node[state] (T4) [below left =of T2] {$0$};
+					\node[state] (T5) [below right  =of T2] {$1$};
+					\node[state] (T6) [below right =of T3] {$2$};
+					\node[state] (T7) [below left =of T4] {$0$};
+					\node[state] (T8) [right =of T7] {$1$};
+					\node[state] (T9) [below right =of T5] {$2$};
+					\node[state] (T10) [below right =of T6] {$3$};
+					
+					\tikzset{mystyle/.style={->,double=orange}}
+					\tikzset{every node/.style={fill=white}}
+					
+					\path (T1) edge [mystyle] node {$0$} (T2);
+					\path (T1) edge [mystyle] node {$1$} (T3);
+					
+					\path (T2) edge [mystyle] node {$0$} (T4);
+					\path (T2) edge [mystyle] node {$1$} (T5);
+					\path (T3) edge [mystyle] node {$1$} (T5);
+					\path (T3) edge [mystyle] node {$0$} (T6);
+					
+					\path (T4) edge [mystyle] node {$0$} (T7);
+					\path (T4) edge [mystyle] node {$0$} (T8);
+					\path (T5) edge [mystyle] node {$0$} (T8);
+					\path (T5) edge [mystyle] node {$0$} (T9);
+					\path (T6) edge [mystyle] node {$0$} (T10);
+%					\path (T3) edge [mystyle] node {$1$} (T7);
+				\end{tikzpicture}
+				\caption{Corrected Acyclic Graph}
+			\end{center}
+		\end{figure}
+		
+		
+		\begin{figure}
+			\begin{tikzpicture}[>=stealth',shorten >=1pt,node distance=2cm,on grid,initial/.style={}]
+				\node[state] (T1) {$T1$};
+				\node[state] (T4) [below =of T1] {$T4$};
+				\node[state] (T3) [left  =of T4] {$T3$};
+				\node[state] (T2) [left  =of T3] {$T2$};
+				\node[state] (T5) [right =of T4] {$T5$};
+				\node[state] (T6) [right =of T5] {$T6$};
+				\node[state] (T8) [below =of T4] {$T8$};
+				\node[state] (T7) [left  =of T8] {$T7$};
+				\node[state] (T9) [right =of T8] {$T9$};
+				\node[state] (T10) [below =of T8] {$T10$};
+				
+				\tikzset{mystyle/.style={->,double=orange}}
+				\tikzset{every node/.style={fill=white}}
+				\path (T1) edge [mystyle] node {$18$} (T2);
+				\path (T1) edge [mystyle] node {$12$} (T3);
+				\path (T1) edge [mystyle] node {$9$}  (T4);
+				\path (T1) edge [mystyle] node {$11$} (T5);
+				\path (T1) edge [mystyle] node {$14$} (T6);
+%				\path (T2) edge [mystyle] node {$19$} (T8);
+				\path (T2) edge [mystyle] node {$16$} (T9);
+%				\path (T3) edge [mystyle] node {$23$} (T7);
+				
+				\path (T2) edge [mystyle] node[pos=0.7] {$19$} (T8);
+				\path (T3) edge [mystyle] node[pos=0.7] {$23$} (T7);
+				\path (T4) edge [mystyle] node {$27$} (T8);
+				\path (T4) edge [mystyle] node {$23$} (T9);
+				\path (T5) edge [mystyle] node {$13$} (T9);
+				\path (T6) edge [mystyle] node {$15$} (T8);
+				\path (T7) edge [mystyle] node {$17$} (T10);
+				\path (T8) edge [mystyle] node {$11$} (T10);
+				\path (T9) edge [mystyle] node {$13$} (T10);
+			\end{tikzpicture}
+			\caption{Corrected Acyclic Graph}
+		\end{figure}
+		
+		\begin{tikzpicture}[level distance=1.3cm,
+			level 1/.style={sibling distance=4cm},
+			level 2/.style={sibling distance=1.6cm}]
+			level 3/.style={sibling distance=0.1cm}]
+%			\tikzstyle{every node}=[circle,draw]
+			
+%			\node (Root) [red] {0}
+			\node (Root) {0}
+			
+			child {
+%				node{0}
+				node[] {0}
+				edge from parent[black]
+%				node[above] {3}
+%				node[below]  {$\frac{4}{9}$}
+				child{
+					node {0}
+					edge from parent[black]
+					child {
+						node[black] {0}
+						edge from parent[black]
+					}
+					child { 
+						node {1} 
+					} 
+				}
+				child { 
+					node {1}
+					child { 
+						node {1} 
+					}
+					child { 
+						node {2} 
+					}
+				}
+			}
+			child {
+				node {1} 
+				child { 
+					node {2}
+					child { 
+						node {3} 
+					}
+					child { 
+						node {2} 
+					}
+				}
+				child { 
+					node {1}
+					child { 
+						node {2} 
+					}
+					child { 
+						node {1} 
+					}
+				}
+			};
+		\end{tikzpicture}
+	
 		The probability of increasing the counter value for a given occurrence in this case is given as $p=\frac{1}{\sqrt{2}^{k_n}}$. Hence, $q=1-\frac{1}{\sqrt{2}^{k_n}}$.
 		Inferring from Equations (\ref{equation1}), (\ref{equation2}) and (\ref{equation3});
 		\begin{align*}
